# item-cleaner

./: Cargo.toml  readme.md
.github/workflows/: build.yml  release.yml
src/: main.rs  profile.rs
